# hello-rust

./: .gitignore  .gitmodules  README.md
enclave/: Cargo.toml
enclave/networking/: Cargo.toml
enclave/networking/src/: lib.rs
enclave/some_algo/: Cargo.toml  algo.proto  build.rs
enclave/some_algo/src/: lib.rs
enclave/src/: lib.rs
