cargo-features = ["resolver"]

[package]
name = "networking"
version = "0.1.0"
authors = ["Samuel Xing"]
edition = "2018"
resolver = "2"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types       = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd        = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "thread", "backtrace"] }
sgx_tcrypto     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse         = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand        = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
chrono          = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki          = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots    = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
base64          = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna           = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint      = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec         = { version = "*", default-features = false}
httparse        = { version = "1.3.2", default-features=false }
itertools       = { version = "0.8" , default-features = false, features = []}
rustls          = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
anyhow          = { git = "https://github.com/mesalock-linux/anyhow-sgx" }
mio             = { git = "https://github.com/mesalock-linux/mio-sgx", branch = "v0.6_sgx_1.1.3"}
log             = { git = "https://github.com/mesalock-linux/log-sgx" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../incubator-teaclave-sgx-sdk/sgx_alloc" }
sgx_backtrace_sys = { path = "../../incubator-teaclave-sgx-sdk/sgx_backtrace_sys" }
sgx_build_helper = { path = "../../incubator-teaclave-sgx-sdk/sgx_build_helper" }
sgx_demangle = { path = "../../incubator-teaclave-sgx-sdk/sgx_demangle" }
sgx_libc = { path = "../../incubator-teaclave-sgx-sdk/sgx_libc" }
sgx_rand = { path = "../../incubator-teaclave-sgx-sdk/sgx_rand" }
sgx_tcrypto = { path = "../../incubator-teaclave-sgx-sdk/sgx_tcrypto" }
sgx_tprotected_fs = { path = "../../incubator-teaclave-sgx-sdk/sgx_tprotected_fs" }
sgx_trts = { path = "../../incubator-teaclave-sgx-sdk/sgx_trts" }
sgx_tse = { path = "../../incubator-teaclave-sgx-sdk/sgx_tse" }
sgx_tstd = { path = "../../incubator-teaclave-sgx-sdk/sgx_tstd" }
sgx_types = { path = "../../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_unwind = { path = "../../incubator-teaclave-sgx-sdk/sgx_unwind" }
