[package]
name = "some_algo"
version = "0.1.0"
authors = ["Samuel Xing"]
edition = "2018"

[lib]
name = "some_algo"

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["thread", "net", "backtrace"] }
sgx_rand            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand_derive     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
serde               = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_derive        = { git = "https://github.com/mesalock-linux/serde-sgx"}
serde_json          = { git = "https://github.com/mesalock-linux/serde-json-sgx", tag = "sgx_1.1.3"  }
rustc-serialize     = { git = "https://github.com/mesalock-linux/rustc-serialize-sgx", tag = "sgx_1.1.3"  }
rand                = { version = "=0.6.3", default-features = false, features = []}
nalgebra            = { version = "=0.18.1", default-features = false, features = ["alloc"]}
prost               = { git = "https://github.com/mesalock-linux/prost-sgx", tag = "sgx_1.1.3"  }
bytes               = { git = "https://github.com/mesalock-linux/bytes-sgx", tag = "sgx_1.1.3"  }
prost-types         = { git = "https://github.com/mesalock-linux/prost-sgx", tag = "sgx_1.1.3"  }
http_req            = { git = "https://github.com/mesalock-linux/http_req-sgx", tag = "sgx_1.1.3"  }
anyhow              = { git = "https://github.com/mesalock-linux/anyhow-sgx", tag = "sgx_1.1.3"  }
mio                 = { git = "https://github.com/mesalock-linux/mio-sgx", branch = "v0.6_sgx_1.1.3"}

[build-dependencies]
prost-build = "0.6"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../incubator-teaclave-sgx-sdk/sgx_alloc" }
sgx_backtrace_sys = { path = "../../incubator-teaclave-sgx-sdk/sgx_backtrace_sys" }
sgx_build_helper = { path = "../../incubator-teaclave-sgx-sdk/sgx_build_helper" }
sgx_demangle = { path = "../../incubator-teaclave-sgx-sdk/sgx_demangle" }
sgx_libc = { path = "../../incubator-teaclave-sgx-sdk/sgx_libc" }
sgx_rand = { path = "../../incubator-teaclave-sgx-sdk/sgx_rand" }
sgx_rand_derive = { path = "../../incubator-teaclave-sgx-sdk/sgx_rand_derive" }
sgx_tprotected_fs = { path = "../../incubator-teaclave-sgx-sdk/sgx_tprotected_fs" }
sgx_trts = { path = "../../incubator-teaclave-sgx-sdk/sgx_trts" }
sgx_tstd = { path = "../../incubator-teaclave-sgx-sdk/sgx_tstd" }
sgx_types = { path = "../../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_unwind = { path = "../../incubator-teaclave-sgx-sdk/sgx_unwind" }
